controllers/cerebro/testdata/loadbalancer_without_target.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-lb-cb
  namespace: default
  labels:
    cluster: test
    cerebro.k8s.webcenter.fr: "true"
  annotations:
    cerebro.k8s.webcenter.fr: "true"
spec:
  type: LoadBalancer
  sessionAffinity: None
  selector:
    cluster: test
    cerebro.k8s.webcenter.fr: "true"
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: http
