controllers/cerebro/testdata/service_default.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-cb
  namespace: default
  labels:
    cluster: test
    cerebro.k8s.webcenter.fr: "true"
    cerebro.k8s.webcenter.fr/service: "true"
  annotations:
    cerebro.k8s.webcenter.fr: "true"
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    cluster: test
    cerebro.k8s.webcenter.fr: "true"
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: http
